--- a/Capstone2.ipynb
+++ b/Capstone2.ipynb
@@ -3414,7 +3414,7 @@
     "* Rata-rata pembelian **Permen** tertinggi adalah customer dengan status pernikahan **Widow**. \n",
     "* **Rata-rata pembelian produk dengan diskon** tertinggi dilakukan oleh customer dengan status pernikahan **Alone**.\n",
     "* Rata-rata pembelian melalui **website** tertinggi adalah customer dengan status pernikahan **YOLO**\n",
-    "* Rata-rata pembelian melalui **katalog & toko** tertinggi adalah customer dengan pendidikan **Absurd**.\n",
+    "* Rata-rata pembelian melalui **katalog & toko** tertinggi adalah customer dengan status pernikahan **Absurd**.\n",
     "* **Customer yang paling sering mengunjungi website tiap bulannya** adalah customer dengan status pernikahan **YOLO**."
    ]
   },
@@ -4935,11 +4935,11 @@
    "metadata": {},
    "source": [
     "RFM Score dibagi menjadi beberapa segment :\n",
-    "* '>' 4.5 : Top Customer\n",
-    "* 4.5 > rfm score > 4 : High Value Customer\n",
-    "* 4>rfm score >3 : Medium value customer\n",
-    "* 3>rfm score>1.6 : Low-value customer\n",
-    "* rfm score<1.6 :Lost Customer"
+    "* rfm score > 4.5 : Top Customer\n",
+    "* rfm score > 4 : High Value Customer\n",
+    "* rfm score > 3 : Medium value customer\n",
+    "* rfm score> 1.6 : Low-value customer\n",
+    "* rfm score< 1.6 :Lost Customer"
    ]
   },
   {
